gitops/cluster-config/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-orion-ingress
  namespace: provider
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: orion.lab-jdmonsalvel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiware-kong-kong-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - orion.lab-jdmonsalvel.com
      secretName: orion-tls
